--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -48,3 +48,26 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta_build.outputs.tags }}
           labels: ${{ steps.meta_build.outputs.labels }}
+
+      - name: Install cosign
+        uses: sigstore/cosign-installer@main
+
+      - name: Cosign check install!
+        run: cosign version 
+
+      - name: Extract First Tag
+        id: extract_tag
+        run: echo "::set-output name=first_tag::$(echo '${{ steps.meta_build.outputs.tags }}' | awk '{print $1}')"
+      - name: Debug First Tag
+        run: echo "First Tag ${{ steps.extract_tag.outputs.first_tag }}"
+
+      - name: Sign the container image
+        env:
+          COSIGN_EXPERIMENTAL: "true"
+        run: cosign sign --yes ${{ steps.extract_tag.outputs.first_tag }}
+
+      - name: Verify the images
+        run: |
+          cosign verify ghcr.io/Hamburg-Port-Authority/rppc \
+            --certificate-identity https://github.com/Hamburg-Port-Authority/rppc/.github/workflows/main.yml@refs/heads/main \
+            --certificate-oidc-issuer https://token.actions.githubusercontent.com | jq       
